# CITS3003-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.md.txt  report_22973676_22989775.docx
Project/res/shaders/partF/: vStart.glsl
Project/src/: gnatidread.h  scene-start.cpp
res/shaders/: fEnd.glsl  fStart.glsl  vEnd.glsl  vStart.glsl
res/shaders/partF/: fStart.glsl
res/shaders/partG/: fEnd.glsl  vEnd.glsl
src/: gnatidread2.h  scene-start.cpp
